--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,10 +1,9 @@
 footer {
     position: fixed;
-    background: white;
+    background: #00FF00;
     height: 60px;
     width: 100%;
     bottom: 0;
-    border-top: 1px solid #CCCCCC;
 }
 footer p {
     position: absolute;
